# resumer

./: .gitignore  .goreleaser.yaml  README.md  go.mod  go.sum  install.sh  main.go  pyproject.toml
.github/workflows/: ci.yml  release.yml
internal/cli/: cli.go  firstrun.go  firstrun_test.go
internal/execres/: exec_other.go  exec_unix.go
internal/provider/: provider.go  provider_test.go
internal/provider/claudecode/: claudecode.go  claudecode_test.go  execcwd.go  execcwd_test.go
internal/render/: json.go  render.go
internal/session/: session.go
internal/textutil/: textutil.go  textutil_test.go
internal/tui/: delegate.go  model.go
resumer/: __init__.py  cli.py  picker.py  registry.py  render.py  utils.py
resumer/providers/: base.py  claude_code.py  codex.py  gemini.py
src/: __init__.py  picker.py  registry.py  render.py  session.py  utils.py
src/providers/: base.py  claude_code.py  codex.py
tests/: demo.tape  resumer-demo.tape  run-qa.sh
tests/assertions/: 01-render.sh  02-navigate.sh  03-search.sh  04-select-exec.sh  05-cancel-esc.sh  06-args-passthrough.sh  07-codex-picker.sh  08-unified-render.sh  09-unified-select.sh  10-missing-provider.sh  11-drift-json-diff.sh  12-stale-cwd-fix.sh  _lib.sh
tests/demo/: gen-fixtures.sh
tests/integration/: integration_test.go
tests/mock-bin/: claude  codex  gemini
tests/unit/: test_cc_resume_drift.py  test_claude_code_cwd.py  test_cli_first_run.py  test_project_label.py  test_render_layout.py
tests/visual/: picker-detail.tape  picker-list-big.tape  picker-list.tape  picker-nocolor.tape
(+12 files in other folders)
